# rex

./: .envrc.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/agent/: planner_agent.py  react_agent.py  upgraded_planner_agent.py
src/mcp_client/: client.py
src/mcp_servers/: client.py  git_mcp_server.py  simple_server.py  simple_stdio_client.py
src/utilities/: constants.py  misc.py
